site:deploy make.

--- a/README
+++ b/README
@@ -26,6 +26,9 @@
   リポジトリ
     https://github.com/fukuyama/forecast_market
 
+  Maven site page
+    http://www4.big.or.jp/~fukuyama/project/forecast_market/
+
 ファイル構成
  TBD
 
