--- a/README
+++ b/README
@@ -23,6 +23,9 @@
     git(http://code.google.com/p/msysgit/)
     mvn(http://maven.apache.org/)
 
+    Eclipse plugins
+     AmaterasUML(http://amateras.sourceforge.jp/cgi-bin/fswiki/wiki.cgi?page=AmaterasUML)
+
   リポジトリ情報
     https://github.com/fukuyama/forecast_market
 
@@ -73,5 +76,3 @@
 使い方
  TBD
 
-履歴
- 2011/04/02 README作成中
