--- a/README
+++ b/README
@@ -25,6 +25,7 @@
 
     Eclipse plugins
      AmaterasUML(http://amateras.sourceforge.jp/cgi-bin/fswiki/wiki.cgi?page=AmaterasUML)
+     Eclipse-CS(http://eclipse-cs.sf.net/)
 
   リポジトリ情報
     https://github.com/fukuyama/forecast_market
